fix: scalar docs, swagger-ui updated
